--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@nrwl/angular": "15.9.2",
     "@types/express": "~4.17.13",
     "axios": "^1.0.0",
+    "bcryptjs": "^2.4.3",
     "clsx": "^1.2.1",
     "express": "~4.18.1",
     "mongoose": "^7.0.4",
@@ -69,6 +70,7 @@
     "@nrwl/workspace": "15.9.2",
     "@nx-plus/docusaurus": "^15.0.0-rc.0",
     "@schematics/angular": "~15.2.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "~4.17.13",
     "@types/jest": "^29.4.0",
     "@types/node": "~18.7.1",
