--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/express": "~4.17.13",
     "axios": "^1.0.0",
     "bcryptjs": "^2.4.3",
+    "bson": "^5.2.0",
     "clsx": "^1.2.1",
     "express": "~4.18.1",
     "mongoose": "^7.0.4",
