--- a/apps/duality-social-angular/package.json
+++ b/apps/duality-social-angular/package.json
@@ -22,8 +22,6 @@
     "@angular/platform-browser": "~15.2.0",
     "@angular/platform-browser-dynamic": "~15.2.0",
     "@angular/router": "~15.2.0",
-    "@azure/msal-angular": "^2.1.2",
-    "@azure/msal-browser": "^2.22.1",
     "@nrwl/angular": "^15.7.2",
     "@nrwl/jest": "^15.8.5",
     "@pusher/push-notifications-web": "^1.1.0",
@@ -33,6 +31,7 @@
     "mongoose-browser": "^5.2.8-pre-2",
     "ngx-logger": "^5.0.11",
     "pusher-angular": "^1.0.0",
+    "realm-web": "^2.0.0",
     "rxjs": "~7.8.0"
   },
   "devDependencies": {
