--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "build": "yarn all:build",
     "serve": "npx nx serve duality-social-node",
     "serve:dev": "npx nx serve duality-social-node --configuration development",
-    "npm-globals": "npm install -g yarn @angular/cli @nrwl/cli npx nx jest",
+    "npm-globals": "npm install -g yarn @angular/cli @nrwl/cli npx nx jest cmake-js realm-cli",
     "azure:login": "az login"
   },
   "private": true,
@@ -38,12 +38,12 @@
     "clsx": "^1.2.1",
     "express": "~4.18.1",
     "mongoose": "^7.0.4",
-    "msal": "^1.4.17",
     "prism-react-renderer": "^1.3.5",
     "pusher": "^5.1.2",
     "pusher-js": "^8.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "realm": "^11.8.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
