--- a/apps/duality-social-angular/package.json
+++ b/apps/duality-social-angular/package.json
@@ -25,6 +25,7 @@
     "@nrwl/angular": "^15.7.2",
     "@nrwl/jest": "^15.8.5",
     "@pusher/push-notifications-web": "^1.1.0",
+    "angularx-social-login": "^4.1.0",
     "connect-mongodb-session": "^3.1.1",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.4",
