--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "realm": "^11.8.0",
+    "realm-web": "^2.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.12.0"
