strip out much of fontawesome, obviate npm setup requirements

--- a/package.json
+++ b/package.json
@@ -5,17 +5,19 @@
   "scripts": {
     "fontawesome:setup": "scripts/setup-fa-npm.sh",
     "newSecret": "node -e \"console.log (require('crypto').randomBytes(32).toString ('hex'));\"",
-    "all": "yarn && cd libs/duality-social-lib && yarn && cd ../../apps/duality-social-angular && yarn && cd ../../apps/duality-social-node && yarn && cd ../..",
-    "all:upgrade": "yarn upgrade && cd libs/duality-social-lib && yarn upgrade && cd ../../apps/duality-social-angular && yarn upgrade && cd ../duality-social-node && yarn upgrade && cd ../..",
-    "all:build": "npx nx build duality-social-lib && npx nx build duality-social-angular && npx nx build duality-social-node",
-    "all:build:verbose": "npx nx build duality-social-lib --verbose && npx nx build duality-social-angular --verbose && npx nx build duality-social-node --verbose",
-    "all:build:dev": "npx nx build duality-social-lib --configuration development && npx nx build duality-social-angular --configuration development && npx nx build duality-social-node --configuration development",
-    "all:test": "npx nx test duality-social-lib && npx nx test duality-social-angular && npx nx test duality-social-node",
-    "build": "yarn all:build",
+    "install:all": "yarn && cd libs/duality-social-lib && yarn && cd ../../apps/duality-social-angular && yarn && cd ../../apps/duality-social-node && yarn && cd ../..",
+    "upgrade:all": "yarn upgrade && cd libs/duality-social-lib && yarn upgrade && cd ../../apps/duality-social-angular && yarn upgrade && cd ../duality-social-node && yarn upgrade && cd ../..",
+    "build:all": "npx nx build duality-social-lib && npx nx build duality-social-angular && npx nx build duality-social-node",
+    "build:all:verbose": "npx nx build duality-social-lib --verbose && npx nx build duality-social-angular --verbose && npx nx build duality-social-node --verbose",
+    "build:all:dev": "npx nx build duality-social-lib --configuration development && npx nx build duality-social-angular --configuration development && npx nx build duality-social-node --configuration development",
+    "test:all": "npx nx test duality-social-lib && npx nx test duality-social-angular && npx nx test duality-social-node",
+    "build": "yarn build:all",
     "serve": "npx nx serve duality-social-node",
     "serve:dev": "npx nx serve duality-social-node --configuration development",
     "npm-globals": "npm install -g yarn @angular/cli @nrwl/cli npx nx jest",
-    "azure:login": "az login"
+    "azure:login": "az login",
+    "clean:all": "rm -rf node_modules apps/duality-social-angular/node_modules apps/duality-social-node/node_modules libs/duality-social-lib/node_modules dist/ ~/.cache && yarn cache clean",
+    "migrate:latest": "npx nx migrate latest && npx nx migrate --run-migrations"
   },
   "private": true,
   "dependencies": {
@@ -30,7 +32,7 @@
     "@docusaurus/core": "2.1.0",
     "@docusaurus/preset-classic": "2.1.0",
     "@mdx-js/react": "^1.6.22",
-    "@nrwl/angular": "15.9.2",
+    "@nrwl/angular": "16.3.1",
     "@types/express": "~4.17.13",
     "axios": "^1.0.0",
     "bcryptjs": "^2.4.3",
@@ -59,16 +61,16 @@
     "@angular/compiler-cli": "~15.2.0",
     "@angular/language-service": "~15.2.0",
     "@docusaurus/module-type-aliases": "2.1.0",
-    "@nrwl/cypress": "15.9.2",
-    "@nrwl/esbuild": "15.9.2",
-    "@nrwl/eslint-plugin-nx": "15.9.2",
-    "@nrwl/jest": "15.9.2",
-    "@nrwl/js": "15.9.2",
-    "@nrwl/linter": "15.9.2",
-    "@nrwl/node": "15.9.2",
-    "@nrwl/nx-cloud": "^16.0.4",
-    "@nrwl/web": "15.9.2",
-    "@nrwl/workspace": "15.9.2",
+    "@nrwl/cypress": "16.3.1",
+    "@nrwl/esbuild": "16.3.1",
+    "@nrwl/eslint-plugin-nx": "16.3.1",
+    "@nrwl/jest": "16.3.1",
+    "@nrwl/js": "16.3.1",
+    "@nrwl/linter": "16.3.1",
+    "@nrwl/node": "16.3.1",
+    "@nrwl/nx-cloud": "16.0.5",
+    "@nrwl/web": "16.3.1",
+    "@nrwl/workspace": "16.3.1",
     "@nx-plus/docusaurus": "^15.0.0-rc.0",
     "@schematics/angular": "~15.2.0",
     "@types/bcryptjs": "^2.4.2",
@@ -86,7 +88,7 @@
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
     "jest-preset-angular": "~13.0.0",
-    "nx": "15.9.2",
+    "nx": "16.3.1",
     "prettier": "^2.6.2",
     "ts-jest": "^29.0.5",
     "ts-node": "10.9.1",
