--- a/libs/duality-social-lib/package.json
+++ b/libs/duality-social-lib/package.json
@@ -6,15 +6,7 @@
   "dependencies": {
     "@angular-devkit/build-angular": "~15.2.0",
     "@angular/cli": "~15.2.0",
-    "@fortawesome/fontawesome-pro": "^6.3.0",
-    "@fortawesome/fontawesome-svg-core": "^6.3.0",
-    "@fortawesome/free-brands-svg-icons": "^6.3.0",
-    "@fortawesome/pro-duotone-svg-icons": "^6.3.0",
-    "@fortawesome/pro-light-svg-icons": "^6.3.0",
-    "@fortawesome/pro-regular-svg-icons": "^6.3.0",
-    "@fortawesome/pro-solid-svg-icons": "^6.3.0",
-    "@fortawesome/pro-thin-svg-icons": "^6.3.0",
-    "@fortawesome/sharp-solid-svg-icons": "^6.3.0",
+    "@fortawesome/fontawesome-common-types": "^6.4.0",
     "@types/jest": "^29.4.0",
     "@types/linkify-it": "^3.0.2",
     "@types/markdown-it": "^12.2.3",
@@ -23,10 +15,12 @@
     "mongoose": "^7.0.4",
     "openai": "^3.2.1",
     "phone": "^3.1.35",
+    "sanitize-html": "^2.10.0",
     "string-strip-html": "^13.2.3",
     "tlds": "^1.236.0"
   },
   "devDependencies": {
+    "@types/sanitize-html": "^2.9.0",
     "jest-util": "^29.5.0"
   }
 }
