try to fix issues with pipes/errors

--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "build:all:dev": "npx nx build duality-social-lib --configuration development && npx nx build duality-social-angular --configuration development && npx nx build duality-social-node --configuration development",
     "test:all": "npx nx test duality-social-lib && npx nx test duality-social-angular && npx nx test duality-social-node",
     "build": "yarn build:all",
-    "serve": "npx nx serve duality-social-node",
+    "serve": "npx nx serve duality-social-node --configuration production",
     "serve:dev": "npx nx serve duality-social-node --configuration development",
+    "serve:angular:dev": "npx nx serve duality-social-angular --configuration development",
+    "serve:angular": "npx nx serve duality-social-angular --configuration production",
     "npm-globals": "npm install -g yarn @angular/cli @nrwl/cli npx nx jest",
     "azure:login": "az login",
     "clean:all": "rm -rf node_modules apps/duality-social-angular/node_modules apps/duality-social-node/node_modules libs/duality-social-lib/node_modules dist/ ~/.cache && yarn cache clean",
@@ -31,7 +33,7 @@
     "@docusaurus/core": "2.1.0",
     "@docusaurus/preset-classic": "2.1.0",
     "@mdx-js/react": "^1.6.22",
-    "@nrwl/angular": "16.3.1",
+    "@nrwl/angular": "16.3.2",
     "@types/express": "~4.17.13",
     "axios": "^1.0.0",
     "bcryptjs": "^2.4.3",
@@ -60,16 +62,16 @@
     "@angular/compiler-cli": "~15.2.0",
     "@angular/language-service": "~15.2.0",
     "@docusaurus/module-type-aliases": "2.1.0",
-    "@nrwl/cypress": "16.3.1",
-    "@nrwl/esbuild": "16.3.1",
-    "@nrwl/eslint-plugin-nx": "16.3.1",
-    "@nrwl/jest": "16.3.1",
-    "@nrwl/js": "16.3.1",
-    "@nrwl/linter": "16.3.1",
-    "@nrwl/node": "16.3.1",
+    "@nrwl/cypress": "16.3.2",
+    "@nrwl/esbuild": "16.3.2",
+    "@nrwl/eslint-plugin-nx": "16.3.2",
+    "@nrwl/jest": "16.3.2",
+    "@nrwl/js": "16.3.2",
+    "@nrwl/linter": "16.3.2",
+    "@nrwl/node": "16.3.2",
     "@nrwl/nx-cloud": "16.0.5",
-    "@nrwl/web": "16.3.1",
-    "@nrwl/workspace": "16.3.1",
+    "@nrwl/web": "16.3.2",
+    "@nrwl/workspace": "16.3.2",
     "@nx-plus/docusaurus": "^15.0.0-rc.0",
     "@schematics/angular": "~15.2.0",
     "@types/bcryptjs": "^2.4.2",
@@ -87,7 +89,7 @@
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
     "jest-preset-angular": "~13.0.0",
-    "nx": "16.3.1",
+    "nx": "16.3.2",
     "prettier": "^2.6.2",
     "ts-jest": "^29.0.5",
     "ts-node": "10.9.1",
