--- a/apps/duality-social-angular/package.json
+++ b/apps/duality-social-angular/package.json
@@ -18,7 +18,7 @@
     "@angular/flex-layout": "^15.0.0-beta.42",
     "@angular/forms": "~15.2.0",
     "@angular/material": "^15.2.0",
-    "@angular/material-moment-adapter": "^15.2.0",
+    "@angular/material-moment-adapter": "^16.0.4",
     "@angular/platform-browser": "~15.2.0",
     "@angular/platform-browser-dynamic": "~15.2.0",
     "@angular/router": "~15.2.0",
@@ -29,7 +29,6 @@
     "@pusher/push-notifications-web": "^1.1.0",
     "connect-mongodb-session": "^3.1.1",
     "jwt-decode": "^3.1.2",
-    "moment": "^2.29.4",
     "mongoose-browser": "^5.2.8-pre-2",
     "ngx-logger": "^5.0.12",
     "pusher-angular": "^1.0.0",
@@ -38,6 +37,7 @@
   "devDependencies": {
     "@angular-devkit/core": "^15.2.0",
     "@angular/compiler": "~15.2.0",
-    "@types/connect-mongodb-session": "^2.4.4"
+    "@types/connect-mongodb-session": "^2.4.4",
+    "moment": "^2.29.4"
   }
 }
