towards keycloak from msal and fusion auth tests

--- a/libs/duality-social-lib/package.json
+++ b/libs/duality-social-lib/package.json
@@ -8,10 +8,7 @@
     "@angular/cli": "~15.2.0",
     "@fortawesome/fontawesome-common-types": "^6.4.0",
     "@types/jest": "^29.4.0",
-    "@types/linkify-it": "^3.0.2",
-    "@types/markdown-it": "^12.2.3",
-    "linkify-it": "^4.0.1",
-    "markdown-it": "^13.0.1",
+    "keycloak-js": "^21.1.2",
     "mongoose": "^7.0.4",
     "openai": "^3.2.1",
     "phone": "^3.1.35",
