--- a/package.json
+++ b/package.json
@@ -3,9 +3,14 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "newSecret": "node -e \"console.log (require('crypto').randomBytes(32).toString ('hex'));\"",
+    "secret:new": "node -e \"console.log (require('crypto').randomBytes(32).toString ('hex'));\"",
     "install:all": "yarn && cd libs/duality-social-lib && yarn && cd ../../apps/duality-social-angular && yarn && cd ../../apps/duality-social-node && yarn && cd ../..",
     "upgrade:all": "yarn upgrade && cd libs/duality-social-lib && yarn upgrade && cd ../../apps/duality-social-angular && yarn upgrade && cd ../duality-social-node && yarn upgrade && cd ../..",
+    "build:angular": "npx nx build duality-social-angular",
+    "build:angular:dev": "npx nx build duality-social-angular --configuration development",
+    "build:lib": "npx nx build duality-social-lib",
+    "build:affected": "npx nx affected:build",
+    "build:node": "npx nx build duality-social-node",
     "build:all": "npx nx build duality-social-lib && npx nx build duality-social-angular && npx nx build duality-social-node",
     "build:all:verbose": "npx nx build duality-social-lib --verbose && npx nx build duality-social-angular --verbose && npx nx build duality-social-node --verbose",
     "build:all:dev": "npx nx build duality-social-lib --configuration development && npx nx build duality-social-angular --configuration development && npx nx build duality-social-node --configuration development",
@@ -15,12 +20,25 @@
     "serve:dev": "npx nx serve duality-social-node --configuration development",
     "serve:angular:dev": "npx nx serve duality-social-angular --configuration development",
     "serve:angular": "npx nx serve duality-social-angular --configuration production",
-    "npm-globals": "npm install -g yarn @angular/cli @nrwl/cli npx nx jest",
-    "azure:clear": "az account clear",
-    "azure:login": "az login",
+    "npm-globals": "npm install -g npm yarn @angular/cli @nrwl/cli npx nx jest",
     "azure:allow-telemetry": "az config set core.allow_broker=true && az account clear && az login",
     "azure:auth-cycle": "az account clear && az login",
-    "clean:all": "rm -rf node_modules apps/duality-social-angular/node_modules apps/duality-social-node/node_modules libs/duality-social-lib/node_modules dist/ ~/.cache && yarn cache clean",
+    "azure:clear": "az account clear",
+    "azure:login": "az login",
+    "clean:caches": "rm -rf ~/.cache && yarn cache clean",
+    "clean:locks": "rm -f yarn.lock apps/duality-social-angular/yarn.lock apps/duality-social-node/yarn.lock libs/duality-social-lib/yarn.lock",
+    "clean:modules": "rm -rf node_modules apps/duality-social-angular/node_modules apps/duality-social-node/node_modules libs/duality-social-lib/node_modules",
+    "clean:output": "rm -rf dist/",
+    "docker:build:direct": "docker build -f Dockerfile -t duality-social-app-1 .",
+    "docker:build": "docker-compose build --no-cache",
+    "docker:down": "docker-compose down",
+    "docker:keycloak": "docker-compose -f docker-compose.keycloak.yml",
+    "docker:keycloak:build": "docker-compose -f docker-compose.keycloak.yml build --no-cache",
+    "docker:keycloak:down": "docker-compose -f docker-compose.keycloak.yml down",
+    "docker:keycloak:up": "docker-compose -f docker-compose.keycloak.yml up",
+    "docker:keycloak:logs": "docker-compose -f docker-compose.keycloak.yml logs",
+    "docker:logs": "docker compose logs",
+    "docker:up": "docker-compose up -d",
     "migrate:latest": "npx nx migrate latest",
     "migrate:run-migrations": "npx nx migrate --run-migrations"
   },
@@ -44,8 +62,8 @@
     "bson": "^5.2.0",
     "clsx": "^1.2.1",
     "express": "~4.18.1",
+    "keycloak-js": "^21.1.2",
     "mongoose": "^7.0.4",
-    "msal": "^1.4.17",
     "prism-react-renderer": "^1.3.5",
     "pusher": "^5.1.2",
     "pusher-js": "^8.0.2",
