--- a/apps/duality-social-angular/package.json
+++ b/apps/duality-social-angular/package.json
@@ -22,13 +22,14 @@
     "@angular/platform-browser": "~15.2.0",
     "@angular/platform-browser-dynamic": "~15.2.0",
     "@angular/router": "~15.2.0",
-    "@azure/msal-angular": "^2.1.2",
-    "@azure/msal-browser": "^2.22.1",
     "@nrwl/angular": "^15.7.2",
     "@nrwl/jest": "^15.8.5",
     "@pusher/push-notifications-web": "^1.1.0",
+    "angular-oauth2-oidc": "^15.0.1",
     "connect-mongodb-session": "^3.1.1",
     "jwt-decode": "^3.1.2",
+    "keycloak-angular": "^14.0.0",
+    "keycloak-js": "^21.1.2",
     "mongoose-browser": "^5.2.8-pre-2",
     "ngx-logger": "^5.0.12",
     "pusher-angular": "^1.0.0",
