--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "build:angular:dev": "npx nx build duality-social-angular --configuration development",
     "build:lib": "npx nx build duality-social-lib",
     "build:affected": "npx nx affected:build",
-    "build:node": "npx nx build duality-social-node",
     "build:all": "npx nx build duality-social-lib && npx nx build duality-social-angular && npx nx build duality-social-node",
     "build:all:verbose": "npx nx build duality-social-lib --verbose && npx nx build duality-social-angular --verbose && npx nx build duality-social-node --verbose",
     "build:all:dev": "npx nx build duality-social-lib --configuration development && npx nx build duality-social-angular --configuration development && npx nx build duality-social-node --configuration development",
+    "build:node": "npx nx build duality-social-node",
+    "build:node:dev": "npx nx build duality-social-node --configuration development",
     "test:all": "npx nx test duality-social-lib && npx nx test duality-social-angular && npx nx test duality-social-node",
     "build": "yarn build:all",
     "serve": "npx nx serve duality-social-node --configuration production",
