package upgrades, add new commands

--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
     "secret:new": "node -e \"console.log (require('crypto').randomBytes(32).toString ('hex'));\"",
     "install:all": "yarn && cd libs/duality-social-lib && yarn && cd ../../apps/duality-social-angular && yarn && cd ../../apps/duality-social-node && yarn && cd ../..",
     "upgrade:all": "yarn upgrade && cd libs/duality-social-lib && yarn upgrade && cd ../../apps/duality-social-angular && yarn upgrade && cd ../duality-social-node && yarn upgrade && cd ../..",
-    "build:angular": "npx nx build duality-social-angular",
+    "build:angular": "npx nx build duality-social-angular --configuration production",
     "build:angular:dev": "npx nx build duality-social-angular --configuration development",
-    "build:lib": "npx nx build duality-social-lib",
-    "build:affected": "npx nx affected:build",
-    "build:all": "npx nx build duality-social-lib && npx nx build duality-social-angular && npx nx build duality-social-node",
-    "build:all:verbose": "npx nx build duality-social-lib --verbose && npx nx build duality-social-angular --verbose && npx nx build duality-social-node --verbose",
+    "build:lib": "npx nx build duality-social-lib --configuration production",
+    "build:lib:dev": "npx nx build duality-social-lib --configuration development",
+    "build:affected": "npx nx affected:build --configuration production",
+    "build:affected:dev": "npx nx affected:build --configuration development",
+    "build:all": "npx nx build duality-social-lib --configuration production && npx nx build duality-social-angular --configuration production&& npx nx build duality-social-node --configuration production",
+    "build:all:verbose": "npx nx build duality-social-lib --verbose --configuration production && npx nx build duality-social-angular --verbose --configuration production && npx nx build duality-social-node --verbose --configuration production",
     "build:all:dev": "npx nx build duality-social-lib --configuration development && npx nx build duality-social-angular --configuration development && npx nx build duality-social-node --configuration development",
-    "build:node": "npx nx build duality-social-node",
+    "build:node": "npx nx build duality-social-node --configuration production",
     "build:node:dev": "npx nx build duality-social-node --configuration development",
     "test:all": "npx nx test duality-social-lib && npx nx test duality-social-angular && npx nx test duality-social-node",
     "build": "yarn build:all",
@@ -32,6 +34,7 @@
     "clean:output": "rm -rf dist/",
     "docker:build:direct": "docker build -f Dockerfile -t duality-social-app-1 .",
     "docker:build": "docker-compose build --no-cache",
+    "docker:dev": "docker-compose -f .devcontainer/docker-compose.yml",
     "docker:down": "docker-compose down",
     "docker:keycloak": "docker-compose -f docker-compose.keycloak.yml",
     "docker:keycloak:build": "docker-compose -f docker-compose.keycloak.yml build --no-cache",
@@ -67,7 +70,6 @@
     "bson": "^5.2.0",
     "clsx": "^1.2.1",
     "express": "~4.18.1",
-    "keycloak-js": "^21.1.2",
     "mongoose": "^7.0.4",
     "prism-react-renderer": "^1.3.5",
     "pusher": "^5.1.2",
