put back keycloak-js as a dep of angular

--- a/.devcontainer/.env.example
+++ b/.devcontainer/.env.example
@@ -11,3 +11,8 @@ KEYCLOAK_ADMIN=admin
 KEYCLOAK_ADMIN_PASSWORD=keycloak-admin-password
 KEYCLOAK_CLIENT_SECRET=client secret from keycloak duality social client
 KEYCLOAK_REGISTRATION_TOKEN=registration token from keycloak duality social client
+PUSHER_APP_ID=pusher-app-id
+PUSHER_KEY=pusher-app-key
+PUSHER_SECRET=pusher-app-secret
+SITE_URL=http://localhost:3000
+COMPOSE_PROJECT_NAME=duality-social_devcontainer
