--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,18 @@
 MONGO_INITDB_ROOT_USERNAME=admin
-MONGO_INITDB_ROOT_PASSWORD=dualitydb!
+MONGO_INITDB_ROOT_PASSWORD=mongo-password
 MONGO_INITDB_DATABASE=duality
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 DATABASE_NAME=keycloak
 DATABASE_USERNAME=keycloak
-DATABASE_PASSWORD={your password}
+DATABASE_PASSWORD=keycloak-password
 KEYCLOAK_VERSION=21.1.2-0
 KEYCLOAK_ADMIN=admin
-KEYCLOAK_ADMIN_PASSWORD={your password}
-PUSHER_APP_ID={your app id}
-PUSHER_KEY={your key}
-PUSHER_SECRET={yuor secret}
-SITE_URL=http://localhost:3000
+KEYCLOAK_ADMIN_PASSWORD=keycloak-admin-password
+KEYCLOAK_CLIENT_SECRET=client secret from keycloak duality social client
+KEYCLOAK_REGISTRATION_TOKEN=registration token from keycloak duality social client
+PUSHER_APP_ID=pusher-app-id
+PUSHER_KEY=pusher-app-key
+PUSHER_SECRET=pusher-app-secret
+SITE_URL=http://duality.social
+COMPOSE_PROJECT_NAME=duality-social
