trying to get this to build again

--- a/apps/duality-social-node/project.json
+++ b/apps/duality-social-node/project.json
@@ -18,7 +18,11 @@
           "outExtension": {
             ".js": ".js"
           }
-        }
+        },
+        "allowedCommonJsDependencies": [
+          "base64-js",
+          "js-sha256"
+        ]
       },
       "configurations": {
         "production": {
