--- a/apps/duality-social-node/package.json
+++ b/apps/duality-social-node/package.json
@@ -40,7 +40,8 @@
     "@types/compression": "^1.7.2",
     "@types/connect-mongodb-session": "^2.4.4",
     "@types/cors": "^2.8.13",
-    "@types/express-session": "^1.17.6",
+    "@types/express": "^4.17.17",
+    "@types/express-session": "^1.17.7",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/morgan": "^1.9.4",
     "@types/passport": "^1.0.12",
