--- a/packages/duality-social-react/project.json
+++ b/packages/duality-social-react/project.json
@@ -52,7 +52,8 @@
       "defaultConfiguration": "development",
       "options": {
         "buildTarget": "duality-social-react:build",
-        "hmr": true
+        "hmr": true,
+        "port": 3000
       },
       "configurations": {
         "development": {
