--- a/.devcontainer/.env.example
+++ b/.devcontainer/.env.example
@@ -3,6 +3,8 @@ DUALITY_DB_NAME=duality
 DUALITY_DB_USER=duality
 DUALITY_DB_PASSWORD=dualityDb!
 SITE_URL=http://localhost:3000
+SESSION_SECRET=secret
+SESSION_TABLE=sessions
 #
 KEYCLOAK_DB_NAME=keycloak
 KEYCLOAK_DB_USER=keycloak
