--- a/package.json
+++ b/package.json
@@ -30,13 +30,19 @@
   "dependencies": {
     "@swc/helpers": "~0.5.0",
     "axios": "^1.0.0",
+    "connect-pg-simple": "^9.0.0",
     "express": "~4.18.1",
     "express-rate-limit": "^6.7.0",
+    "express-session": "^1.17.3",
     "keycloak-js": "^21.1.2",
     "path": "^0.12.7",
+    "pg": "^8.11.1",
+    "pg-hstore": "^2.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.11.2",
+    "sequelize": "^6.32.1",
+    "sequelize-typescript": "^2.1.5",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
