--- a/.devcontainer/.env.example
+++ b/.devcontainer/.env.example
@@ -1,19 +1,11 @@
 #
-DUALITY_DB_NAME=duality
-DUALITY_DB_USER=duality
-DUALITY_DB_PASSWORD=dualityDb!
-SITE_URL=http://localhost:3000
-SESSION_SECRET=secret
-SESSION_TABLE=sessions
+MONGO_DB_USERNAME=duality
+MONGO_DB_PASSWORD=dualityDb!ChangeMe
+MONGO_URI=mongodb://duality:dualityDb!ChangeMe@mongo:27017/duality?authSource=admin
+MONGO_SESSION_URI=mongodb://duality:dualityDb!ChangeMe@mongo:27017/sessions?authSource=admin
 #
-KEYCLOAK_DB_NAME=keycloak
-KEYCLOAK_DB_USER=keycloak
-KEYCLOAK_DB_PASSWORD=keycloakDb!
-KEYCLOAK_VERSION=21.1.2-0
-KEYCLOAK_ADMIN=admin
-KEYCLOAK_ADMIN_PASSWORD=keycloakAdmin!
-KEYCLOAK_CLIENT_SECRET=x
-KEYCLOAK_REGISTRATION_TOKEN=y
+SESSION_SECRET=secret
+SITE_URL=http://localhost:3000
 #
 PUSHER_APP_ID=1592034
 PUSHER_KEY=1592034
