--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "build:all": "yarn build:react && yarn build:node",
-    "build:all:dev": "yarn build:react:dev && yarn build:node:dev",
+    "build:affected": "npx nx affected -t build",
+    "build:affected:dev": "npx nx affected -t build --configuration=development",
+    "build:all": "npx nx build duality-social-lib && npx nx build duality-social-node && npx nx build duality-social-react",
+    "build:all:dev": "npx nx build duality-social-lib --configuration=development && npx nx build duality-social-node --configuration=development && npx nx build duality-social-react --configuration=development",
+    "build:lib": "npx nx build duality-social-lib",
     "build:node": "npx nx build duality-social-node",
     "build:node:dev": "npx nx build duality-social-node --configuration=development",
     "build:react": "npx nx build duality-social-react",
@@ -12,17 +15,9 @@
     "clean": "rm -rf dist",
     "docker:dev": "docker-compose -f .devcontainer/docker-compose.yml",
     "docker:dev:ps": "docker-compose -f .devcontainer/docker-compose.yml ps",
-    "docker:keycloak:logs": "docker-compose -f .devcontainer/docker-compose.yml logs keycloak",
     "newSecret": "node -e \"console.log (require('crypto').randomBytes(32).toString ('hex'));\"",
     "npm-globals:install": "npm install -g npm npx nx yarn",
     "vscode:create-settings": "/bin/bash ./.devcontainer/create-settings.sh",
-    "postgres:setup": "/bin/bash ./.devcontainer/create-sql.sh",
-    "postgres:backup": "/bin/bash ./.devcontainer/backup-sql.sh",
-    "postgres:backup:duality": "/bin/bash ./.devcontainer/backup-sql.sh --dbname=duality",
-    "postgres:backup:keycloak": "/bin/bash ./.devcontainer/backup-sql.sh --dbname=keycloak",
-    "postgres:backup:postgres": "/bin/bash ./.devcontainer/backup-sql.sh --dbname=postgres",
-    "postgres:dev:rebuild": "/bin/bash ./.devcontainer/rebuild-postgres.sh",
-    "postgres:restore": "/bin/bash ./.devcontainer/restore-sql.sh",
     "serve:node": "npx nx serve duality-social-node",
     "serve:react": "npx nx serve duality-social-react"
   },
@@ -30,19 +25,20 @@
   "dependencies": {
     "@swc/helpers": "~0.5.0",
     "axios": "^1.0.0",
-    "connect-pg-simple": "^9.0.0",
-    "express": "~4.18.1",
+    "bcrypt": "^5.1.0",
+    "connect-mongo": "^5.0.0",
+    "express": "^4.18.2",
+    "express-oauth-server": "^2.0.0",
+    "express-openid-connect": "^2.16.0",
     "express-rate-limit": "^6.7.0",
     "express-session": "^1.17.3",
-    "keycloak-js": "^21.1.2",
+    "express-validator": "^7.0.1",
+    "mongoose": "^7.3.2",
+    "oauth2-server": "^3.1.1",
     "path": "^0.12.7",
-    "pg": "^8.11.1",
-    "pg-hstore": "^2.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.11.2",
-    "sequelize": "^6.32.1",
-    "sequelize-typescript": "^2.1.5",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
@@ -53,7 +49,7 @@
     "@nx/esbuild": "16.4.2",
     "@nx/eslint-plugin": "16.4.2",
     "@nx/jest": "16.4.2",
-    "@nx/js": "16.4.2",
+    "@nx/js": "^16.5.1",
     "@nx/linter": "16.4.2",
     "@nx/node": "16.4.2",
     "@nx/react": "16.4.2",
@@ -64,9 +60,15 @@
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.51",
     "@testing-library/react": "14.0.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "~4.17.13",
+    "@types/express-oauth-server": "^2.0.4",
+    "@types/express-session": "^1.17.7",
+    "@types/express-validator": "^3.0.0",
     "@types/jest": "^29.4.0",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "18.14.2",
+    "@types/oauth2-server": "^3.0.13",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
