--- a/package.json
+++ b/package.json
@@ -16,9 +16,7 @@
     "newSecret": "node -e \"console.log (require('crypto').randomBytes(32).toString ('hex'));\"",
     "npm-globals:install": "npm install -g npm npx nx yarn",
     "vscode:create-settings": "/bin/bash ./.devcontainer/create-settings.sh",
-    "postgres:setup": "/bin/bash ./.devcontainer/create-sql.sh",
     "postgres:backup": "/bin/bash ./.devcontainer/backup-sql.sh",
-    "postgres:backup:duality": "/bin/bash ./.devcontainer/backup-sql.sh --dbname=duality",
     "postgres:backup:keycloak": "/bin/bash ./.devcontainer/backup-sql.sh --dbname=keycloak",
     "postgres:backup:postgres": "/bin/bash ./.devcontainer/backup-sql.sh --dbname=postgres",
     "postgres:dev:rebuild": "/bin/bash ./.devcontainer/rebuild-postgres.sh",
@@ -30,19 +28,17 @@
   "dependencies": {
     "@swc/helpers": "~0.5.0",
     "axios": "^1.0.0",
+    "connect-mongo": "^5.0.0",
     "connect-pg-simple": "^9.0.0",
-    "express": "~4.18.1",
+    "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
     "express-session": "^1.17.3",
     "keycloak-js": "^21.1.2",
+    "mongoose": "^7.3.2",
     "path": "^0.12.7",
-    "pg": "^8.11.1",
-    "pg-hstore": "^2.3.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-router-dom": "6.11.2",
-    "sequelize": "^6.32.1",
-    "sequelize-typescript": "^2.1.5",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
@@ -65,7 +61,9 @@
     "@swc/core": "~1.3.51",
     "@testing-library/react": "14.0.0",
     "@types/express": "~4.17.13",
+    "@types/express-session": "^1.17.7",
     "@types/jest": "^29.4.0",
+    "@types/mongoose": "^5.11.97",
     "@types/node": "18.14.2",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
