--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -23,7 +23,7 @@
 	"forwardPorts": [3000],
 
 	// Use 'postCreateCommand' to run commands after the container is created.
-	"postCreateCommand": "apt-get update && apt-get install -y postgresql-client && yarn npm-globals:install && yarn install",
+	"postCreateCommand": "yarn npm-globals:install && yarn install",
 	// "postCreateCommand": "yarn npm-globals && yarn install:all",
 
 	// Configure tool-specific properties.
@@ -38,10 +38,9 @@
 				"nrwl.angular-console",
 				"shd101wyy.markdown-preview-enhanced",
 				"DavidAnson.vscode-markdownlint",
-				"mtxr.sqltools",
-				"mtxr.sqltools-driver-pg",
 				"GitHub.copilot",
-				"GitHub.copilot-labs"
+				"GitHub.copilot-labs",
+				"mongodb.mongodb-vscode"
 			],
 			// Set *default* container specific settings.json values on container create.
 			"settings": { 
