--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "build:all": "yarn build:react && yarn build:node",
-    "build:all:dev": "yarn build:react:dev && yarn build:node:dev",
+    "build:affected": "npx nx affected -t build",
+    "build:affected:dev": "npx nx affected -t build --configuration=development",
+    "build:all": "npx nx build duality-social-lib && npx nx build duality-social-node && npx nx build duality-social-react",
+    "build:all:dev": "npx nx build duality-social-lib --configuration=development && npx nx build duality-social-node --configuration=development && npx nx build duality-social-react --configuration=development",
+    "build:lib": "npx nx build duality-social-lib",
     "build:node": "npx nx build duality-social-node",
     "build:node:dev": "npx nx build duality-social-node --configuration=development",
     "build:react": "npx nx build duality-social-react",
@@ -22,11 +25,15 @@
   "dependencies": {
     "@swc/helpers": "~0.5.0",
     "axios": "^1.0.0",
+    "bcrypt": "^5.1.0",
     "connect-mongo": "^5.0.0",
     "express": "^4.18.2",
+    "express-oauth-server": "^2.0.0",
+    "express-openid-connect": "^2.16.0",
     "express-rate-limit": "^6.7.0",
     "express-session": "^1.17.3",
     "mongoose": "^7.3.2",
+    "oauth2-server": "^3.1.1",
     "path": "^0.12.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -41,7 +48,7 @@
     "@nx/esbuild": "16.4.2",
     "@nx/eslint-plugin": "16.4.2",
     "@nx/jest": "16.4.2",
-    "@nx/js": "16.4.2",
+    "@nx/js": "^16.5.1",
     "@nx/linter": "16.4.2",
     "@nx/node": "16.4.2",
     "@nx/react": "16.4.2",
@@ -52,11 +59,14 @@
     "@swc/cli": "~0.1.62",
     "@swc/core": "~1.3.51",
     "@testing-library/react": "14.0.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "~4.17.13",
+    "@types/express-oauth-server": "^2.0.4",
     "@types/express-session": "^1.17.7",
     "@types/jest": "^29.4.0",
     "@types/mongoose": "^5.11.97",
     "@types/node": "18.14.2",
+    "@types/oauth2-server": "^3.0.13",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
