work on oauth server

--- a/.devcontainer/.env.example
+++ b/.devcontainer/.env.example
@@ -4,8 +4,14 @@ MONGO_DB_PASSWORD=dualityDb!ChangeMe
 MONGO_URI=mongodb://duality:dualityDb!ChangeMe@mongo:27017/duality?authSource=admin
 MONGO_SESSION_URI=mongodb://duality:dualityDb!ChangeMe@mongo:27017/sessions?authSource=admin
 #
+# Uncomment to change default from 15 minutes
+#RATE_LIMITER_WINDOW_MS=900000
+# Uncomment to change default from 1000 tries per window
+#RATE_LIMITER_MAX=1000
 SESSION_SECRET=secret
 SITE_URL=http://localhost:3000
+OAUTH_CLIENT_ID=duality-social-dev
+OAUTH_CLIENT_SECRET=must exist in clients collection
 #
 PUSHER_APP_ID=1592034
 PUSHER_KEY=1592034
