--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "build:node:dev": "npx nx build duality-social-node --configuration=development",
     "build:react": "npx nx build duality-social-react",
     "build:react:dev": "npx nx build duality-social-react --configuration=development",
+    "build-serve": "npx nx build duality-social-react && npx nx build duality-social-node && npx nx serve duality-social-node --configuration=development",
+    "build-serve:dev": "npx nx build duality-social-react --configuration=development && npx nx serve duality-social-node --configuration=development",
     "clean": "rm -rf dist",
     "docker:dev": "docker-compose -f .devcontainer/docker-compose.yml",
     "docker:dev:ps": "docker-compose -f .devcontainer/docker-compose.yml ps",
@@ -19,10 +21,13 @@
     "npm-globals:install": "npm install -g npm npx nx yarn",
     "vscode:create-settings": "/bin/bash ./.devcontainer/create-settings.sh",
     "serve:node": "npx nx serve duality-social-node",
-    "serve:react": "npx nx serve duality-social-react"
+    "serve:node:dev": "npx nx serve duality-social-node --configuration=development",
+    "serve:react": "npx nx serve duality-social-react",
+    "serve:react:dev": "npx nx serve duality-social-react --configuration=development"
   },
   "private": true,
   "dependencies": {
+    "@node-oauth/express-oauth-server": "^3.0.1",
     "@swc/helpers": "~0.5.0",
     "axios": "^1.0.0",
     "bcrypt": "^5.1.0",
@@ -34,7 +39,8 @@
     "express-session": "^1.17.3",
     "express-validator": "^7.0.1",
     "mongoose": "^7.3.2",
-    "oauth2-server": "^3.1.1",
+    "passport": "^0.6.0",
+    "passport-oauth2": "^1.7.0",
     "path": "^0.12.7",
     "react": "18.2.0",
     "react-dom": "18.2.0",
@@ -69,6 +75,8 @@
     "@types/mongoose": "^5.11.97",
     "@types/node": "18.14.2",
     "@types/oauth2-server": "^3.0.13",
+    "@types/passport": "^1.0.12",
+    "@types/passport-oauth2": "^1.4.12",
     "@types/react": "18.2.13",
     "@types/react-dom": "18.2.6",
     "@typescript-eslint/eslint-plugin": "^5.58.0",
